--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -9,12 +9,11 @@
 
 html,
 body {
-	min-height: 100%;
+	height: 100%;
 }
 
 body {
 	font-family: shared.$font-family;
-	/* Disable pull-to-refresh */
 	overscroll-behavior: contain;
 }
 
